--- a/functionalpython.ipynb
+++ b/functionalpython.ipynb
@@ -6,7 +6,7 @@
       "name": "functionalpython.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN06Eyh4v1j1lkuAMb5GPTz",
+      "authorship_tag": "ABX9TyNdVJjTzbA51gJdlIX1JZeV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -317,7 +317,7 @@
         "print(reduce(lambda a, b: a + b, np.array([[1,2,3], [4,5,6]]))) # flatten にならない\r\n",
         "print(reduce(lambda a, b: a + b, np.array([[1,2,3],[4,5,6],[7,8,9]]))) # flatten にならない\r\n"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -336,10 +336,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "0QimhkgYRX7p",
-        "outputId": "ca410462-9c0c-4d7b-83ce-ce4b22d12396",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ca410462-9c0c-4d7b-83ce-ce4b22d12396"
       },
       "source": [
         "# flatten\r\n",
@@ -350,7 +350,7 @@
         "print(reduce(lambda a, b: np.concatenate([a,b]), np.array([[1,2,3], [4,5,6],[7,8,9]])))\r\n",
         "\r\n"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,10 +421,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "LmjM6lCshCT7",
-        "outputId": "6b660724-4bd2-4021-abce-cd2674b77c4d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6b660724-4bd2-4021-abce-cd2674b77c4d"
       },
       "source": [
         "# 次のようなのを for loop を使わずに実現したい check_later\r\n",
@@ -432,12 +432,41 @@
         "for key in m:\r\n",
         "    print(\"{0} {1}, \".format(key, m[key]), end='')\r\n"
       ],
-      "execution_count": 111,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Jan 1, Feb 2, Mar 3, Apr 4, May 5, Jun 6, Jul 7, Aug 8, Sep 9, Oct 10, Nov 11, Dec 12, "
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "e3ZmNjMJrhpV",
+        "outputId": "84f335c1-bc92-4f52-b40c-5f7db40e6d37",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# やりかけ\r\n",
+        "m = {'Jan': 1, 'Feb': 2, 'Mar': 3, 'Apr': 4, 'May': 5, 'Jun': 6, 'Jul': 7, 'Aug': 8, 'Sep': 9, 'Oct': 10, 'Nov': 11, 'Dec': 12}\r\n",
+        "print(list(zip(m.keys(), m.values())))\r\n",
+        "print(m.items())\r\n",
+        "print([item[0]+' '+str(item[1])  for item in m.items()])"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[('Jan', 1), ('Feb', 2), ('Mar', 3), ('Apr', 4), ('May', 5), ('Jun', 6), ('Jul', 7), ('Aug', 8), ('Sep', 9), ('Oct', 10), ('Nov', 11), ('Dec', 12)]\n",
+            "dict_items([('Jan', 1), ('Feb', 2), ('Mar', 3), ('Apr', 4), ('May', 5), ('Jun', 6), ('Jul', 7), ('Aug', 8), ('Sep', 9), ('Oct', 10), ('Nov', 11), ('Dec', 12)])\n",
+            "['Jan 1', 'Feb 2', 'Mar 3', 'Apr 4', 'May 5', 'Jun 6', 'Jul 7', 'Aug 8', 'Sep 9', 'Oct 10', 'Nov 11', 'Dec 12']\n"
           ],
           "name": "stdout"
         }
@@ -456,10 +485,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "k-CfBaEpnOn6",
-        "outputId": "fbec7afe-c47d-4b45-fe77-f904ea9e9f43",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fbec7afe-c47d-4b45-fe77-f904ea9e9f43"
       },
       "source": [
         "line_list = ['  line 1\\n', 'line 2  \\n']\r\n",
@@ -471,7 +500,7 @@
         "stripped_list = [line.strip() for line in line_list]\r\n",
         "print(stripped_list)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
