Colaboratory を使用して作成しました

--- a/functionalpython.ipynb
+++ b/functionalpython.ipynb
@@ -6,7 +6,7 @@
       "name": "functionalpython.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMhZaGr21kZxDSVsqf+djuS",
+      "authorship_tag": "ABX9TyO/3hMuW+1ZWhRAcrGjztjv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -515,11 +515,39 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "F6u5llU2yRyE",
-        "outputId": "20fe5221-0a58-4712-aafc-a7d8c0d2eea8",
+        "id": "5EoT4KBxFkuw",
+        "outputId": "591c5f96-17dc-4804-d613-e25dd598abf0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
+      },
+      "source": [
+        "# 上記を map を使って実装する\r\n",
+        "# map は for loop を使わないので、内包表記よりよいと思う\r\n",
+        "\r\n",
+        "line_list = ['  line 1\\n', 'line 2  \\n']\r\n",
+        "\r\n",
+        "print(list(map(lambda line: line.strip(),  line_list)))"
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['line 1', 'line 2']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F6u5llU2yRyE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "20fe5221-0a58-4712-aafc-a7d8c0d2eea8"
       },
       "source": [
         "def generate_ints(N):\r\n",
@@ -534,7 +562,7 @@
         "# print(next(gen)) # StopIteration\r\n",
         "\r\n"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -543,6 +571,383 @@
             "0\n",
             "1\n",
             "2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3NhVcVi2GLvt"
+      },
+      "source": [
+        "# A recursive generator that generates Tree leaves in in-order.\r\n",
+        "def inorder(t):\r\n",
+        "    if t:\r\n",
+        "        for x in inorder(t.left):\r\n",
+        "            yield x\r\n",
+        "\r\n",
+        "        yield t.label\r\n",
+        "\r\n",
+        "        for x in inorder(t.right):\r\n",
+        "            yield x"
+      ],
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jqIwXdseGgId",
+        "outputId": "98683a17-6443-4ff9-8d74-1e37f53d74fe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# val = (yield i)\r\n",
+        "\r\n",
+        "def counter(maximum):\r\n",
+        "    i = 0\r\n",
+        "    while i < maximum:\r\n",
+        "        val = (yield i)\r\n",
+        "        # If value provided, change counter\r\n",
+        "        if val is not None:\r\n",
+        "            i = val\r\n",
+        "        else:\r\n",
+        "            i += 1\r\n",
+        "\r\n",
+        "it = counter(10)  \r\n",
+        "print(next(it))\r\n",
+        "print(next(it))\r\n",
+        "print(it.send(8))\r\n",
+        "print(next(it))\r\n",
+        "# print(next(it))"
+      ],
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n",
+            "8\n",
+            "9\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t41BmBDjHzq0",
+        "outputId": "99597ad1-8e2b-4861-8d13-0e3dde24fb52",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "def upper(s):\r\n",
+        "    return s.upper()\r\n",
+        "\r\n",
+        "print(list(map(upper, ['sentence', 'fragment'])))\r\n",
+        "print([upper(s) for s in ['sentence', 'fragment']])\r\n",
+        "\r\n",
+        "# 関数定義は要らないのではないか\r\n",
+        "# map では lambda を使う。\r\n",
+        "# 内包表記ではメソッドのまま使える\r\n",
+        "print(list(map(lambda x: x.upper(),  ['sentence', 'fragment'])))\r\n",
+        "print([s.upper() for s in ['sentence', 'fragment']])"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['SENTENCE', 'FRAGMENT']\n",
+            "['SENTENCE', 'FRAGMENT']\n",
+            "['SENTENCE', 'FRAGMENT']\n",
+            "['SENTENCE', 'FRAGMENT']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GGXKTqFRd40y",
+        "outputId": "6360f948-0fef-4c83-93b0-ee1641d089a4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print (list(map (lambda x : x.upper(),  ['sentence', 'fragment'])))"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['SENTENCE', 'FRAGMENT']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KXL7r2BTiECJ"
+      },
+      "source": [
+        "# filter"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XFNfRWdWiFwA",
+        "outputId": "0442f2ba-61fd-4075-afb8-2a372e4d3980",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# filter\r\n",
+        "def is_even(x):\r\n",
+        "    return (x % 2) == 0\r\n",
+        "\r\n",
+        "print(list(filter(is_even, range(10))))\r\n",
+        "\r\n",
+        "print(list(filter(lambda x: (x % 2) == 0, range(10))))\r\n",
+        "\r\n",
+        "print(list(x for x in range(10) if is_even(x)))"
+      ],
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0, 2, 4, 6, 8]\n",
+            "[0, 2, 4, 6, 8]\n",
+            "[0, 2, 4, 6, 8]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xp8bu2cVoZ1Q"
+      },
+      "source": [
+        "# enumerate"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4vlBlDkPlOes",
+        "outputId": "797bb907-6022-4fc1-d087-087e70fa7bca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# enumerate\r\n",
+        "for item in enumerate(['subject', 'verb', 'object']):\r\n",
+        "    print(item)\r\n",
+        "\r\n",
+        "print(list(enumerate(['subject', 'verb', 'object'])))\r\n",
+        "print(list(map(lambda x: (x[0], x[1]), enumerate(['subject', 'verb', 'object']))))"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(0, 'subject')\n",
+            "(1, 'verb')\n",
+            "(2, 'object')\n",
+            "[(0, 'subject'), (1, 'verb'), (2, 'object')]\n",
+            "[(0, 'subject'), (1, 'verb'), (2, 'object')]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_2SNmdSmocD3",
+        "outputId": "dc7a05b4-29b9-4ba3-e649-0955c8782810",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# enumerate の使い方\r\n",
+        "# f = open('data.txt', 'r')\r\n",
+        "f = ['This is an apple.', '', 'That is a pen.','', 'END']\r\n",
+        "for i, line in enumerate(f):\r\n",
+        "    if line.strip() == '':\r\n",
+        "        print('Blank line at line #%i' % i)\r\n",
+        "\r\n",
+        "\r\n",
+        "print(list(map(lambda x: \"Blank line at line #\"+ str(x[0]), (filter(lambda x: x[1] == '', enumerate(f))))))"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Blank line at line #1\n",
+            "Blank line at line #3\n",
+            "['Blank line at line #1', 'Blank line at line #3']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-2h7KPIKv2FT"
+      },
+      "source": [
+        "# sorted\r\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qJZGt3xcv4Yq",
+        "outputId": "69b66c7e-3a28-4636-d0d4-29b593a69b35",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import random\r\n",
+        "# Generate 8 random numbers between [0, 10000)\r\n",
+        "rand_list = random.sample(range(10000), 8)\r\n",
+        "print(rand_list)\r\n",
+        "print(sorted(rand_list))\r\n",
+        "print(sorted(rand_list, reverse=True))\r\n"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[8472, 1787, 5965, 2983, 4798, 9739, 6306, 7455]\n",
+            "[1787, 2983, 4798, 5965, 6306, 7455, 8472, 9739]\n",
+            "[9739, 8472, 7455, 6306, 5965, 4798, 2983, 1787]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "N3XKwMxFwlT6",
+        "outputId": "03465ec3-3ac7-43ca-8fea-15a14c65fa7c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(any([0, 1, 0]))\r\n",
+        "print(any([0, 0, 0]))\r\n",
+        "print(any([1, 1, 1]))\r\n",
+        "print(all([0, 1, 0]))\r\n",
+        "print(all([0, 0, 0]))\r\n",
+        "print(all([1, 1, 1]))\r\n"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "False\n",
+            "True\n",
+            "False\n",
+            "False\n",
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "weQ3OeUtwuYR",
+        "outputId": "39093f55-3049-4e6b-e028-076bdaeeb655",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "list(zip(['a', 'b', 'c'], (1, 2, 3)))"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('a', 1), ('b', 2), ('c', 3)]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6Q1fLUyixBuA"
+      },
+      "source": [
+        "# itertools"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M5yfKhHHxDcY",
+        "outputId": "0fe4b89a-21d7-4193-9787-641a92314e7e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import itertools\r\n",
+        "\r\n",
+        "print(list(itertools.islice(itertools.count(), 10)))\r\n",
+        "print(list(itertools.islice(itertools.count(10), 10)))\r\n",
+        "print(list(itertools.islice(itertools.count(10, 5), 10)))\r\n",
+        "\r\n"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+            "[10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n",
+            "[10, 15, 20, 25, 30, 35, 40, 45, 50, 55]\n"
           ],
           "name": "stdout"
         }
