Colaboratory を使用して作成しました

--- a/functionalpython.ipynb
+++ b/functionalpython.ipynb
@@ -6,7 +6,7 @@
       "name": "functionalpython.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOKGffiOYXufvdv7PrFaB9R",
+      "authorship_tag": "ABX9TyMoxRz4dUk12/jdQrURDUYD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,6 +36,15 @@
         "1. reduce, map, filter を使う。  \r\n",
         "1. iterator, generator を使う。  \r\n",
         "https://docs.python.org/ja/3/howto/functional.html\r\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "t_cxseuygV52"
+      },
+      "source": [
+        "# 新しいセクション"
       ]
     },
     {
@@ -940,7 +949,7 @@
         "print(list(itertools.islice(itertools.count(10, 5), 10)))\r\n",
         "\r\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -957,10 +966,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "AwGYKhBsAOhL",
-        "outputId": "480a3de3-c814-4024-abd2-17cd77760839",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "480a3de3-c814-4024-abd2-17cd77760839"
       },
       "source": [
         "import itertools\r\n",
@@ -970,7 +979,7 @@
         "\r\n",
         "print(list(itertools.repeat([1,2,3,], 5)))\r\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -987,10 +996,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "DdK0M6VrBINv",
-        "outputId": "aa26b9f8-d8ca-4920-9b84-ca53d6196f0b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "aa26b9f8-d8ca-4920-9b84-ca53d6196f0b"
       },
       "source": [
         "import itertools\r\n",
@@ -998,7 +1007,7 @@
         "print(list(itertools.islice(range(10), 2, 8)))\r\n",
         "print(list(itertools.islice(range(10), 2, 8, 2)))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1015,15 +1024,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "r4HpiuDkBjs2",
-        "outputId": "32756697-f006-4b43-acd9-49cfe8f3dd12",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "32756697-f006-4b43-acd9-49cfe8f3dd12"
       },
       "source": [
         "itertools.tee( itertools.count() )"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1043,10 +1052,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ED6cacGgB5oV",
-        "outputId": "77acdc1b-04e2-49d4-fdd9-e33abc846727",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "77acdc1b-04e2-49d4-fdd9-e33abc846727"
       },
       "source": [
         "import os\r\n",
@@ -1054,7 +1063,7 @@
         "                  [('/bin', 'python'), ('/usr', 'bin', 'java'),\r\n",
         "                   ('/usr', 'bin', 'perl'), ('/usr', 'bin', 'ruby')]))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1074,15 +1083,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "j5GG8tEECghc",
-        "outputId": "f40ec160-8027-453f-e7df-90dd87f28831",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f40ec160-8027-453f-e7df-90dd87f28831"
       },
       "source": [
         "print(list(itertools.islice(itertools.filterfalse(lambda x: x%2 != 0, itertools.count()),10)))"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1097,15 +1106,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "u8EAvQXyDMW0",
-        "outputId": "bf9cb85f-0fec-4303-cb08-016231c56d28",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bf9cb85f-0fec-4303-cb08-016231c56d28"
       },
       "source": [
         "print(list(itertools.takewhile(lambda x: x < 10, itertools.count())))"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1120,15 +1129,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "232awvg0DgnU",
-        "outputId": "771a2178-2e69-468d-ca5f-f036e593f0fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "771a2178-2e69-468d-ca5f-f036e593f0fa"
       },
       "source": [
         "print(list(itertools.takewhile(lambda x: x%2==0, itertools.count())))"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1143,15 +1152,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "f-fO84caDxol",
-        "outputId": "c8bb3deb-fe78-4c8f-c7d3-0c9e8c47708d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c8bb3deb-fe78-4c8f-c7d3-0c9e8c47708d"
       },
       "source": [
         "print(list(itertools.islice(itertools.dropwhile(lambda x: x < 10, itertools.count()),10)))"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1166,15 +1175,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "hT0KKytYDzb3",
-        "outputId": "c576fbdd-b6ba-45f9-d642-f36cfaafb2ee",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c576fbdd-b6ba-45f9-d642-f36cfaafb2ee"
       },
       "source": [
         "print(list(itertools.islice(itertools.dropwhile(lambda x: x%2==0, itertools.count()), 10)))"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1189,15 +1198,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "rVkYHp3kEU89",
-        "outputId": "9d481d8c-4920-4674-8cbd-a24519cd70b6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9d481d8c-4920-4674-8cbd-a24519cd70b6"
       },
       "source": [
         "list(itertools.compress([1, 2, 3, 4, 5], [True, True, False, False, True]))"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1217,16 +1226,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "nZ20jiy5EiMj",
-        "outputId": "ef331aab-4660-4feb-f3a0-6950988b65ea",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ef331aab-4660-4feb-f3a0-6950988b65ea"
       },
       "source": [
         "print(list(itertools.combinations([1, 2, 3, 4, 5], 2)))\r\n",
         "print(list(itertools.combinations([1, 2, 3, 4, 5], 3)))"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1241,13 +1250,89 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wGf6W1VMFbYm"
+        "id": "wGf6W1VMFbYm",
+        "outputId": "294ed613-100e-4704-8b97-30c7505e63c3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "print(list(itertools.permutations('aba', 3)))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[('a', 'b', 'a'), ('a', 'a', 'b'), ('b', 'a', 'a'), ('b', 'a', 'a'), ('a', 'a', 'b'), ('a', 'b', 'a')]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RNZ2Ijkeg50E",
+        "outputId": "4136e97e-0f79-4db9-8939-78b2ee16598b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(list(itertools.combinations_with_replacement([1, 2, 3, 4, 5], 2)))"
+      ],
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[(1, 1), (1, 2), (1, 3), (1, 4), (1, 5), (2, 2), (2, 3), (2, 4), (2, 5), (3, 3), (3, 4), (3, 5), (4, 4), (4, 5), (5, 5)]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vA2Hj7PaiZS5",
+        "outputId": "f97721b9-ccdb-4770-b9ce-1226c77f2c78",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# groupby\r\n",
+        "import itertools\r\n",
+        "\r\n",
+        "city_list = [('Decatur', 'AL'), ('Huntsville', 'AL'), ('Selma', 'AL'),\r\n",
+        "             ('Anchorage', 'AK'), ('Nome', 'AK'), ('Flagstaff', 'AZ'), \r\n",
+        "             ('Phoenix', 'AZ'), ('Tucson', 'AZ')]\r\n",
+        "\r\n",
+        "\r\n",
+        "def get_state(city_state):\r\n",
+        "    return city_state[1]\r\n",
+        "\r\n",
+        "list(map (lambda x: (x[0], list(x[1])), itertools.groupby(city_list, get_state)))"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('AL', [('Decatur', 'AL'), ('Huntsville', 'AL'), ('Selma', 'AL')]),\n",
+              " ('AK', [('Anchorage', 'AK'), ('Nome', 'AK')]),\n",
+              " ('AZ', [('Flagstaff', 'AZ'), ('Phoenix', 'AZ'), ('Tucson', 'AZ')])]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 50
+        }
+      ]
     },
     {
       "cell_type": "markdown",
