--- a/functionalpython.ipynb
+++ b/functionalpython.ipynb
@@ -6,7 +6,7 @@
       "name": "functionalpython.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPSAmT2cz604J0GHyrb6TG5",
+      "authorship_tag": "ABX9TyMY2F46gvJtHOgvfcIFWvJY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1347,10 +1347,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Y59O6d9HK9H4",
-        "outputId": "fef8a8d0-205d-496e-ec4e-720d38251a1f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fef8a8d0-205d-496e-ec4e-720d38251a1f"
       },
       "source": [
         "# functoolsfunctools.partial\r\n",
@@ -1374,6 +1374,68 @@
             "ryoさん、hello\n",
             "nishizawaさん、こんにちわ\n",
             "takahashiさん、こんにちわ\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VI9cvQPpVgau",
+        "outputId": "ae85a05b-fc1d-4543-b462-5a51b8b9f9ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "# reduce は haskell の foldr と考えてよいか\r\n",
+        "import operator, functools\r\n",
+        "functools.reduce(operator.concat, ['A', 'BB', 'C'])\r\n",
+        "\r\n",
+        "functools.reduce(operator.concat, ['A', 'BB', 'C'], 'END')"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'ENDABBC'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qaim89ebWnIt",
+        "outputId": "d739f7b3-2c78-4a2f-d5f5-9c54c7030dc1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import operator, itertools\r\n",
+        "print(list(itertools.accumulate([1, 2, 3, 4, 5])))\r\n",
+        "print(list(itertools.accumulate([1, 2, 3, 4, 5], operator.mul)))"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 3, 6, 10, 15]\n",
+            "[1, 2, 6, 24, 120]\n"
           ],
           "name": "stdout"
         }
